third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/diagnostic-not-implemented-unaligned.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Unaligned` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-unaligned.rs:18:23
   |
18 |     takes_unaligned::<NotZerocopy>();
   |                       ^^^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `NotZerocopy`
   |
   = note: Consider adding `#[derive(Unaligned)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::Unaligned`:
             ()
             AtomicBool
             AtomicI8
             AtomicU8
             Cell<T>
             F32<O>
             F64<O>
             I128<O>
           and $N others
note: required by a bound in `takes_unaligned`
  --> tests/ui-nightly/diagnostic-not-implemented-unaligned.rs:21:23
   |
21 | fn takes_unaligned<T: Unaligned>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_unaligned`
